# contourify

./: README.md  pyproject.toml  test_adapter.py
src/contourify/: __init__.py
src/contourify/adapters/: __init__.py  base.py  yolo.py
src/contourify/cli/: main.py
src/contourify/core/: detector.py  generator.py  validator.py
src/contourify/telemetry/: tracker.py
tests/: test_detector.py  test_generator.py  test_validator.py
